--- a/search/index.html
+++ b/search/index.html
@@ -48,7 +48,6 @@
 			<li><a href="/thesis/08-butz.html">The Fate of the Jews &mdash; Art Butz</a></li>
 			<li><a href="/thesis/13-biblio.html">The Fate of the Jews &mdash; Bibliography</a></li>
 			<li><a href="/thesis/12-conclusion.html">The Fate of the Jews &mdash; Conclusion</a></li>
-			<li><a href="/thesis/02-contents.html">The Fate of the Jews &mdash; Contents</a></li>
 			<li><a href="/thesis/11-irving.html">The Fate of the Jews &mdash; David Irving</a></li>
 			<li><a href="/thesis/07-development.html">The Fate of the Jews &mdash; Development of Revisionism</a></li>
 			<li><a href="/thesis/10-leuchter.html">The Fate of the Jews &mdash; Fred Leuchter</a></li>
@@ -88,15 +87,7 @@
 </main><!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer">
-	<div class="row">
-		<div class="col-md-12">
-			<p class="text-center">
-				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
-			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+<footer class="container-fluid footer"></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
