--- a/thesis/03-acknowledgements.html
+++ b/thesis/03-acknowledgements.html
@@ -19,21 +19,12 @@
 	<div class="row">
 	<article class="col-md-10">
 <!-- end bbinclude -->
-<!-- #bbinclude "heading1.incl" -->
+<!-- #bbinclude "heading.incl" -->
 <nav id="nav-jh"></nav>
-<h1>
-	The Fate of Jews in German Hands: <small>An Historical Enquiry into the Development and Significance of Holocaust Revisionism</small>
-</h1>
-<p class="lead">
-	A thesis submitted in partial fulfillment of the requirements for the Degree of Master of Arts in History in the University of Canterbury (New Zealand), 1993
-</p>
-<p>
-	by <a href="/index.html">Joel S. A. Hayward</a>
-</p>
+<h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
 <!-- end bbinclude -->
-			<hr>
 			<h2>
-				ACKNOWLEDGEMENTS
+				Acknowledgements
 			</h2>
 			<p>
 				Writing a thesis on an international phenomenon such as Holocaust Revisionism without being able to travel to archives or libraries in the United States, continental Europe or Great Britain has been a very difficult task. It could not have been accomplished at all had it not been for the kind assistance of the many people in many countries who supplied material in response to my letters of request. After searching out addresses in overseas telephone books at the local public library I wrote more than two hundred such letters, and I am pleased to say that I received responses to all but about twenty. I obtained additional material by placing an advertisement, explaining the nature of my investigation and requesting source material, in an American Revisionist newsletter and in two Jewish newspapers, one in the United States and one in Great Britain. I have chosen, of course, not to side with one school of thought against the other, but to seek critical distance and get <q>both sides of the story</q>. Noting that many scholars involved in the Holocaust controversy wear their moral values on their sleeves, I have consciously attempted not to do so, and not to let my own values harden into biases. Thus, I have contacted and on many occasions received and used material from both anti-Revisionist <i>and</i> Revisionist organizations and individuals. I make no apologies for this and I am tiling to acknowledge on this page the assistance I received from members of both camps, even from those whose views or actions I personally find unpalatable.
@@ -43,7 +34,7 @@
 			</p>
 			<div class="linker">
 				<hr>
-				<b> <a href="00-front.html">First</a> | <a href="02-contents.html">Prev</a> | <a href="index.html">HOME</a> | <a href="04-glossary.html">Next</a> | <a href="14-addendum.html">Last</a> </b>
+				<b> <a href="00-front.html">First</a> | <a href="01-abstract.html">Prev</a> | <a href="index.html">HOME</a> | <a href="04-glossary.html">Next</a> | <a href="14-addendum.html">Last</a> </b>
 			</div>
 
 <!-- #bbinclude "nav-hhp.incl" -->
@@ -53,15 +44,7 @@
 </main><!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer">
-	<div class="row">
-		<div class="col-md-12">
-			<p class="text-center">
-				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
-			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+<footer class="container-fluid footer"></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
