--- a/thesis/08-butz.html
+++ b/thesis/08-butz.html
@@ -19,21 +19,12 @@
 	<div class="row">
 	<article class="col-md-10">
 <!-- end bbinclude -->
-<!-- #bbinclude "heading1.incl" -->
+<!-- #bbinclude "heading.incl" -->
 <nav id="nav-jh"></nav>
-<h1>
-	The Fate of Jews in German Hands: <small>An Historical Enquiry into the Development and Significance of Holocaust Revisionism</small>
-</h1>
-<p class="lead">
-	A thesis submitted in partial fulfillment of the requirements for the Degree of Master of Arts in History in the University of Canterbury (New Zealand), 1993
-</p>
-<p>
-	by <a href="/index.html">Joel S. A. Hayward</a>
-</p>
+<h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
 <!-- end bbinclude -->
-			<hr>
 			<h2>
-				Chapter II: 'The Hoax' according to Arthur R. Butz
+				<small>Chapter II</small><br>&lsquo;The Hoax&rsquo; according to Arthur R. Butz
 			</h2>
 			<blockquote>
 				<p>
@@ -44,7 +35,7 @@
 				Bradley F. Smith wrote these words in 1978. In the same review he claimed that <q>a recently published German study &hellip; systematically refutes</q> the principle Holocaust Revisionist theses. <q>This splendid survey,</q> he claimed, <q>is as applicable to Butz as it is to his German comrades, and should be studied by everyone able to read German.</q><a id="ftn2"></a><a href="08-butz.html">[2]</a> Smith was in error; the article in question &mdash; <i><q>Organisierter Massenmord an Juden in Nationalsozialistischen Vernichtungslagern</q></i><a id="ftn3"></a><a href="08-butz.html">[3]</a> &mdash; refutes neither Butz nor the German Revisionists. The article does not even mention Butz's book (which had not yet been published) or his principle theses, which are different in many ways from the other Revisionist writers mentioned.
 			</p>
 			<p>
-				It has now been fifteen years since Smith briefly reviewed <i>The Hoax of the Twentieth Century</i>, yet despite the book allegedly being a <q>contrived sham</q> and a <q>sitting duck</q> for anti-Revisionists, not one scholar has attempted a detailed refutation. <i>The Hoax</i> has been the subject of a number of short review essays, and has been mentioned in hundreds of biased and unscholarly anti-Revisionist reports. However, not one significant scholarly article or book has been written to challenge or refute Butz's arguments or conclusions. The present writer offers four possible reasons for this lack of scholarly reaction. First, scholars upholding accepted opinion on the Holocaust believe that debating the issues raised by Butz would only 'legitimise' his position. Second, these scholars believe the dishonesty and speciousness of Butz's arguments are so self-evident that no reasonable person could take them seriously. Third, they feel they cannot refute Butz's prin-
+				It has now been fifteen years since Smith briefly reviewed <i>The Hoax of the Twentieth Century,</i> yet despite the book allegedly being a <q>contrived sham</q> and a <q>sitting duck</q> for anti-Revisionists, not one scholar has attempted a detailed refutation. <i>The Hoax</i> has been the subject of a number of short review essays, and has been mentioned in hundreds of biased and unscholarly anti-Revisionist reports. However, not one significant scholarly article or book has been written to challenge or refute Butz's arguments or conclusions. The present writer offers four possible reasons for this lack of scholarly reaction. First, scholars upholding accepted opinion on the Holocaust believe that debating the issues raised by Butz would only 'legitimise' his position. Second, these scholars believe the dishonesty and speciousness of Butz's arguments are so self-evident that no reasonable person could take them seriously. Third, they feel they cannot refute Butz's prin-
 			</p>
 			<hr>
 			<p>
@@ -1606,15 +1597,7 @@
 </main><!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer">
-	<div class="row">
-		<div class="col-md-12">
-			<p class="text-center">
-				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
-			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+<footer class="container-fluid footer"></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
