--- a/thesis/06-intro.html
+++ b/thesis/06-intro.html
@@ -19,19 +19,10 @@
 	<div class="row">
 	<article class="col-md-10">
 <!-- end bbinclude -->
-<!-- #bbinclude "heading1.incl" -->
+<!-- #bbinclude "heading.incl" -->
 <nav id="nav-jh"></nav>
-<h1>
-	The Fate of Jews in German Hands: <small>An Historical Enquiry into the Development and Significance of Holocaust Revisionism</small>
-</h1>
-<p class="lead">
-	A thesis submitted in partial fulfillment of the requirements for the Degree of Master of Arts in History in the University of Canterbury (New Zealand), 1993
-</p>
-<p>
-	by <a href="/index.html">Joel S. A. Hayward</a>
-</p>
+<h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
 <!-- end bbinclude -->
-			<hr>
 			<h2>
 				Introduction
 			</h2>
@@ -537,15 +528,7 @@
 </main><!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer">
-	<div class="row">
-		<div class="col-md-12">
-			<p class="text-center">
-				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
-			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+<footer class="container-fluid footer"></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
