--- a/thesis/index.html
+++ b/thesis/index.html
@@ -18,43 +18,113 @@
 	<div class="row">
 	<article class="col-md-10">
 <!-- end bbinclude -->
-<!-- #bbinclude "heading1.incl" -->
+<!-- #bbinclude "heading.incl" -->
 <nav id="nav-jh"></nav>
-<h1>
-	The Fate of Jews in German Hands: <small>An Historical Enquiry into the Development and Significance of Holocaust Revisionism</small>
-</h1>
-<p class="lead">
+<h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
+<!-- end bbinclude -->
+<p>
 	A thesis submitted in partial fulfillment of the requirements for the Degree of Master of Arts in History in the University of Canterbury (New Zealand), 1993
 </p>
-<p>
-	by <a href="/index.html">Joel S. A. Hayward</a>
-</p>
-<!-- end bbinclude -->
-		<ul>
-			<li> <a href="00-front.html">[Front matter]</a> </li>
-			<li> <a href="01-abstract.html">Abstract</a> </li>
-			<li> <a href="02-contents.html">Contents</a> </li>
-			<li> <a href="03-acknowledgements.html">Acknowledgements</a> </li>
-			<li> <a href="04-glossary.html">Glossary</a> </li>
-			<li> <a href="05-abbreviations.html">Abbreviations</a> </li>
-			<li> <a href="06-intro.html">Introduction</a> </li>
-			<li> <a href="07-development.html">Development of Revisionism</a> </li>
-			<li> <a href="08-butz.html">Art Butz</a> </li>
-			<li> <a href="09-ihr.html">The IHR</a> </li>
-			<li> <a href="10-leuchter.html">Fred Leuchter</a> </li>
-			<li> <a href="11-irving.html">David Irving</a> </li>
-			<li> <a href="12-conclusion.html">Conclusion</a> </li>
-			<li> Appendices </li>
-			<li> <a href="13-biblio.html">Bibliography</a> </li>
-			<li> <a href="14-addendum.html">Addendum</a> (1/26/2000) </li>
-		</ul>
+		<h3>
+			Contents
+		</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th> </th>
+					<th> Page </th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td> <a href="00-front.html">Acknowledgements</a> </td>
+					<td> <a href="00-front.html">I</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="00-front.html">Glossary</a> </td>
+					<td> <a href="00-front.html">III</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="00-front.html">Abbreviations</a> </td>
+					<td> <a href="00-front.html">V</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="06-intro.html">Introduction</a> </td>
+					<td> <a href="06-intro.html">1</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="07-development.html">Chapter I The Development of Holocaust Revisionism</a> </td>
+					<td> <a href="07-development.html">24</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="08-butz.html">Chapter II &lsquo;The Hoax&rsquo; according to Arthur R. Butz</a> </td>
+					<td> <a href="08-butz.html">85</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="09-ihr.html">Chapter III The Institute for Historical Review</a> </td>
+					<td> <a href="09-ihr.html">143</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="10-leuchter.html">Chapter IV The Leuchter Affair</a> </td>
+					<td> <a href="10-leuchter.html">205</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="11-irving.html">Chapter V Irving&rsquo;s War</a> </td>
+					<td> <a href="11-irving.html">261</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="12-conclusion.html">Conclusion</a> </td>
+					<td> <a href="12-conclusion.html">328</a> </td>
+				</tr>
+				<tr>
+					<td> Appendix I </td>
+					<td> 338 </td>
+				</tr>
+				<tr>
+					<td> Appendix II </td>
+					<td> 340 </td>
+				</tr>
+				<tr>
+					<td> Appendix III </td>
+					<td> 341 </td>
+				</tr>
+				<tr>
+					<td> Appendix IV </td>
+					<td> 342 </td>
+				</tr>
+				<tr>
+					<td> Appendix V </td>
+					<td> 343 </td>
+				</tr>
+				<tr>
+					<td> Appendix VI </td>
+					<td> 344 </td>
+				</tr>
+				<tr>
+					<td> Appendix VII </td>
+					<td> 347 </td>
+				</tr>
+				<tr>
+					<td> <a href="13-biblio.html">Bibliography</a> </td>
+					<td> <a href="13-biblio.html">348</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="14-addendum.html">Addendum</a> (1/26/2000) </td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
 		<hr>
 		<p class="text-center">
 			Copyright 1993 J.S.A. Hayward <br>
 			All rights Reserved <br>
-			No reproduction, copy or transmission of any part of this M.A. thesis <br>
+			No reproduction, copy, or transmission of any part of this M.A. thesis <br>
 			may be made without written permission from the author.
 		</p>
+		<div class="linker">
+			<hr>
+			<b><a href="01-abstract.html">Next</a> | <a href="14-addendum.html">Last</a></b>
+		</div>
 <!-- #bbinclude "nav-hhp.incl" -->
 		</article><!-- /.col-md-10 -->
 		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
@@ -62,15 +132,7 @@
 </main><!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer">
-	<div class="row">
-		<div class="col-md-12">
-			<p class="text-center">
-				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
-			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+<footer class="container-fluid footer"></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
