many changes and updates

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Dr. Joel Hayward <small>ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</small>
@@ -40,22 +40,27 @@
 			<dd> <a href="/thesis/index.html">The Fate of Jews in German Hands</a>: An Historical Enquiry into the Development and Significance of Holocaust Revisionism </dd>
 			<dt>Website archive</dt>
 			<dd> <a href="/website/index.html">www.joelhayward.com</a> </dd>
-			<dt>Current website</dt>
-			<dd> <a href="https://www.joelhayward.org">www.joelhayward.org</a> </dd>
 			<dt>Files on this site</dt>
 			<dd> <a href="/search/index.html">Search</a> </dd>
 		</dl>
 		<hr>
 		<p class="text-center">
-			Copyright &copy; Professor Joel Hayward 2003 &mdash; 2021.<br>
+			Copyright &copy; Professor Joel Hayward 2003 &ndash; 2021.<br>
 			The opinions expressed are those of the author and do not reflect the views<br>
 			of the National Defense College or the United Arab Emirates government.
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
