--- a/thesis/12-conclusion.html
+++ b/thesis/12-conclusion.html
@@ -17,10 +17,9 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 <!-- #bbinclude "heading.incl" -->
-<nav id="nav-jh"></nav>
 <h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
 <!-- end bbinclude -->
 			<h2>
@@ -252,10 +251,17 @@
 			</div>
 
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
