--- a/website/articles.html
+++ b/website/articles.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Prof. Joel Hayward&rsquo;s Books and Articles
@@ -274,10 +271,17 @@
 			ABSTRACT: This article analyzes manifestations of Holocaust revisionism in New Zealand and argues that, rather than being a sincere attempt to re-interpret past events based on new evidence or a new reading of the known sources, Holocaust revisionism is in fact often motivated by a right wing political agenda to defame Jewish people.
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
