--- a/website/reviewsofhaywardbooks.html
+++ b/website/reviewsofhaywardbooks.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Reviews of Hayward books
@@ -466,7 +463,7 @@
 			<i>New Zealand Army News,</i> 29 July 2003
 		</p>
 		<p class="text-center">
-			"This is a ground-breaking collection of essays. &hellip; All concerned, writers and editors, must be congratulated on the clarity and freshness of these essays. They are readable and well organised; there is no jargon and even the picture captions are interesting. <i>Born to Lead?</i> is inspirational".
+			"This is a ground-breaking collection of essays. &hellip; All concerned, writers and editors, must be congratulated on the clarity and freshness of these essays. They are readable and well organised; there is no jargon and even the picture captions are interesting. <i>Born to Lead?</i> is inspirational."
 		</p>
 		<p class="text-center">
 			&mdash; <i>The Press,</i> 6 September 2003
@@ -478,10 +475,17 @@
 			&mdash; Daniel Jackson, <i>Wanganui Chronicle,</i> September 2003.
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
