--- a/website/theeveningstandardarticle.html
+++ b/website/theeveningstandardarticle.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			The Evening Standard article
@@ -199,10 +196,17 @@
 			Dr Joel Hayward is a New Zealand scholar, writer and poet. Dr Joel Hayward is also a world recognised military historian. Although some people know Dr Joel Hayward&rsquo;s name because of a masters thesis on Holocaust revisionism that he wrote at Canterbury University in Christchurch over a decade ago Dr Joel Hayward is not a Holocaust revisionist and does not support Holocaust revisionism. Dr Joel Hayward lives in Palmerston North in New Zealand.
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
