--- a/website/thesisaddendum.html
+++ b/website/thesisaddendum.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Joel Hayward Thesis Addendum
@@ -128,10 +125,17 @@
 			The University of Canterbury would never again treat me, one of its successful Alumni, with this professional and supportive attitude. Within five months of gratefully receiving Professor Wake's excellent letter, this same University would submit me to a humiliating "trial" that it presented publicly as an independent investigation established to reassure the community that it was publicly accountable. Well, then, why won't the University let the public, or even me, the "accused," see the workings of this investigation?
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
