--- a/website/theweekendheraldarticle.html
+++ b/website/theweekendheraldarticle.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			The <i>Weekend Herald</i> article
@@ -132,10 +129,17 @@
 			<sup>*</sup> Note: What I actually told Ms. Gregory was: <q>When I submitted the thesis I had little idea if I was on the right track. I was not sure if the thesis was excellent, average, or a piece of junk. But I had followed my supervisor's advice, and had not plagiarised or been dishonest, so I thought I'd gain a 'pass'.</q>
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
