--- a/website/thoughtcrimes.html
+++ b/website/thoughtcrimes.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Thought Crimes?
@@ -83,10 +80,17 @@
 			On 25 July 2000 (according to my telephone jotter) I rang and asked Professor Sharp why his views on "academic freedom" had changed so much over three years. In a tone of embarrassment he told me that he "couldn't remember all the details of the planned Victoria seminar" but claimed that he was "sure the circumstances of the two cases are very different in nature." He refused to be drawn further.
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
