--- a/website/doyoutrustthelistener.html
+++ b/website/doyoutrustthelistener.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			Do You Trust The Listener?
@@ -396,10 +393,17 @@
 			<li><a href="/website/journalism.htm/">Click HERE to read my views on other New Zealand journalism!</a></li>
 		</ul>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
