--- a/website/myoverviewoftheaffair.html
+++ b/website/myoverviewoftheaffair.html
@@ -18,10 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
-<!-- end bbinclude -->
-<!-- #bbinclude "nav-jh.incl" -->
-<nav id="nav-jh"></nav>
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			<a href="/">Prof. Joel Hayward&rsquo;s Old Website</a>
@@ -214,10 +211,17 @@
 		</p>
 
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
