--- a/website/southlandtimeseditorial.html
+++ b/website/southlandtimeseditorial.html
@@ -18,7 +18,7 @@
 </header>
 <main class="container-fluid">
 	<div class="row">
-	<article class="col-md-10">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 		<h1>
 			<i>The Southland Times</i> editorial
@@ -78,10 +78,17 @@
 			"The much-quoted wartime exhortation "Lest we forget" is worth remembering. But it should never be interpreted as meaning "Lest we question."
 		</p>
 <!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-10 -->
-		<nav class="navigation col-md-2" id="nav-hhp"></nav><!-- /.col-md-2 -->
-	</div><!-- /.row -->
-</main><!-- /.container -->
+		</article><!-- /.col-md-9 -->
+		<aside class="col-md-3">
+			<nav class="navigation" id="nav-hhp"></nav>
+			<hr>
+			<nav id="nav-jh"></nav>
+		</aside>
+<!-- /.col-md-2 -->
+	</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
 <footer class="container-fluid footer"></footer><!-- /.container -->
