--- a/thesis/05-abbreviations.html
+++ b/thesis/05-abbreviations.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/hayward.css" media="screen">
+<link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
 <!-- end bbinclude -->
 </head>
 <body>
@@ -48,7 +48,7 @@
 				</tr>
 				<tr>
 					<td> <b>IMT</b> </td>
-					<td> (International Military Tribunal) <i>Trial of the Major War Criminals Before the International Military Tribunal, Nuremberg, 14 November 1945 &mdash; 1 October 1946</i>, 42 volumes (Nuremberg, 1947-1949) </td>
+					<td> (International Military Tribunal) <i>Trial of the Major War Criminals Before the International Military Tribunal, Nuremberg, 14 November 1945 &ndash; 1 October 1946</i>, 42 volumes (Nuremberg, 1947-1949) </td>
 				</tr>
 				<tr>
 					<td> <b>JDL</b> </td>
@@ -64,7 +64,7 @@
 				</tr>
 				<tr>
 					<td> <b>NMT</b> </td>
-					<td> <i>Trials of War Criminals Before the Nuremberg Military Tribunals Under Control Council Law No. 10. Nuernberg, October 1946 &mdash; April 1949</i>, 15 volumes (U.S. Government Printing Office, Washington, D.C., 1949-53) </td>
+					<td> <i>Trials of War Criminals Before the Nuremberg Military Tribunals Under Control Council Law No. 10. Nuernberg, October 1946 &ndash; April 1949</i>, 15 volumes (U.S. Government Printing Office, Washington, D.C., 1949-53) </td>
 				</tr>
 				<tr>
 					<td> <b>PMO</b> </td>
